/**
 * 
 */
package um.tesoreria.core.hexagonal.contrato.infrastructure.persistence.entity;

import java.io.Serial;
import java.io.Serializable;
import java.math.BigDecimal;
import java.time.OffsetDateTime;

import jakarta.persistence.*;

import com.fasterxml.jackson.annotation.JsonFormat;

import lombok.*;
import um.tesoreria.core.hexagonal.geografica.infrastructure.persistence.entity.GeograficaEntity;
import um.tesoreria.core.model.Auditable;
import um.tesoreria.core.hexagonal.facultad.infrastructure.persistence.entity.FacultadEntity;
import um.tesoreria.core.hexagonal.personas.persona.infrastructure.persistence.entity.PersonaEntity;
import um.tesoreria.core.util.Jsonifier;

/**
 * @author daniel
 *
 */
@Getter
@Setter
@Entity
@Table(name = "contrato")
@Builder
@EqualsAndHashCode(callSuper = false)
@NoArgsConstructor
@AllArgsConstructor
public class ContratoEntity extends Auditable implements Serializable {
	/**
	 * 
	 */
	@Serial
    private static final long serialVersionUID = -6511834189234951853L;

	@Id
	@GeneratedValue(strategy = GenerationType.IDENTITY)
	private Long contratoId;

	@Column(name = "con_per_id")
	private BigDecimal personaId;

	@Column(name = "con_doc_id")
	private Integer documentoId;

	@Column(name = "con_desde")
	@JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd'T'HH:mm:ssXX", timezone = "UTC")
	private OffsetDateTime desde;

	@Column(name = "con_fac_id")
	private Integer facultadId;

	@Column(name = "con_pla_id")
	private Integer planId;

	@Column(name = "con_mat_id")
	private String materiaId;

	@Column(name = "con_geo_id")
	private Integer geograficaId;

	@Column(name = "con_cam_id")
	private Integer cargoMateriaId;

	@Column(name = "con_primervenc")
	@JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd'T'HH:mm:ssXX", timezone = "UTC")
	private OffsetDateTime primerVencimiento;

	@Builder.Default
	@Column(name = "con_cargo")
	private String cargo = "";

	@Builder.Default
	private BigDecimal montoFijo = BigDecimal.ZERO;

	@Builder.Default
	@Column(name = "con_canonmensual")
	private BigDecimal canonMensual = BigDecimal.ZERO;

	@Builder.Default
	@Column(name = "con_canonmensualsa")
	private BigDecimal canonMensualSinAjuste = BigDecimal.ZERO;

	@Column(name = "con_hasta")
	@JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd'T'HH:mm:ssXX", timezone = "UTC")
	private OffsetDateTime hasta;

	@Builder.Default
	@Column(name = "con_canonmensualletras")
	private String canonMensualLetras = "";

	@Builder.Default
	@Column(name = "con_canontotal")
	private BigDecimal canonTotal = BigDecimal.ZERO;

	@Builder.Default
	@Column(name = "con_canontotalletras")
	private String canonTotalLetras = "";

	@Builder.Default
	@Column(name = "con_meses")
	private Integer meses = 0;

	@Builder.Default
	@Column(name = "con_mesesletras")
	private String mesesLetras = "";

	@Builder.Default
	@Column(name = "con_ajuste")
	private Byte ajuste = 0;

    @OneToOne(optional = true)
	@JoinColumn(name = "con_fac_id", insertable = false, updatable = false)
	private FacultadEntity facultad;

    @OneToOne(optional = true)
	@JoinColumn(name = "con_geo_id", insertable = false, updatable = false)
	private GeograficaEntity geografica;

    @OneToOne(optional = true)
    @JoinColumns({
            @JoinColumn(name = "con_per_id", referencedColumnName = "per_id", insertable = false, updatable = false),
            @JoinColumn(name = "con_doc_id", referencedColumnName = "per_doc_id", insertable = false, updatable = false)
    })
    private PersonaEntity persona;

    public String jsonify() {
        return Jsonifier.builder(this).build();
    }

}
